<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_Explore"/>
        />

    <item
        android:id="@+id/navigation_Active"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/title_Saved" />

<!--    <item-->
<!--        android:id="@+id/navigation_Learnings"-->
<!--        android:icon="@drawable/ic_notifications_none_black_24dp"-->
<!--        android:title="@string/title_Alerts" />-->
    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/title_Profile" />
</menu>
